force-app/main/default/objects/List_Product_Price__c/List_Product_Price__c.object-meta.xml
<CustomObject>
    <description>this holds the list price for products, this is linked to Opportunity product</description>
    <label>List Product Price</label>
    <nameField>
        <displayFormat>LPP-{000000}</displayFormat>
        <label>ListPrice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Products Price</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>