force-app/main/default/objects/List_Product_Price__c/fields/Allow_Installments__c.field-meta.xml
<CustomField>
    <fullName>Allow_Installments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this specifies if installments are allowed</description>
    <label>Installments Allow</label>
    <type>Checkbox</type>
</CustomField>