force-app/main/default/objects/List_Product_Price__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Company to which product belongs.</description>
    <label>User Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>List Products Price</relationshipLabel>
    <relationshipName>List_Products_Price</relationshipName>
    <type>Lookup</type>
</CustomField>