force-app/main/default/objects/List_Product_Price__c/fields/Default_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Default_Quantity__c</fullName>
    <description>this holds the default Quantity</description>
    <label>Default Quantity</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>