force-app/main/default/objects/List_Product_Price__c/fields/Id_Asset__c.field-meta.xml
<CustomField>
    <fullName>Id_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipName>List_Price_Products</relationshipName>
    <type>Lookup</type>
</CustomField>