force-app/main/default/objects/List_Product_Price__c/fields/Id_Country__c.field-meta.xml
<CustomField>
    <fullName>Id_Country__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Country</description>
    <label>User Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>List Products Price</relationshipLabel>
    <relationshipName>List_Products_Price</relationshipName>
    <type>Lookup</type>
</CustomField>