force-app/main/default/objects/List_Product_Price__c/fields/Id_List_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Id_List_Product_Group__c</fullName>
    <description>this information gives you to which product group this product belongs</description>
    <label>List Product Group</label>
    <referenceTo>List_Product_Group__c</referenceTo>
    <relationshipName>Id_List_Price_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>