force-app/main/default/objects/List_Product_Price__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this attribute activates the product, so that this product is able to select in the opportunity</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>