force-app/main/default/objects/List_Product_Price__c/fields/Maximum_Discount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Discount__c</fullName>
    <label>Maximum Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>