force-app/main/default/objects/List_Product_Price__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>this is the name of the product</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>