force-app/main/default/objects/List_Product_Price__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Product Type to determine the Asset Type</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Menu Printing</fullName>
            </value>
            <value>
                <fullName>Recurring Fee</fullName>
            </value>
            <value>
                <fullName>Setup Fee</fullName>
            </value>
            <value>
                <fullName>Renewal Fee</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Exclusive Special Offer</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Online Marketing</fullName>
            </value>
            <value>
                <fullName>White Label Web</fullName>
            </value>
            <value>
                <fullName>White Label App</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Premium placement</fullName>
            </value>
            <value>
                <fullName>Premium Listing</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Dish Level Photoshoot</fullName>
            </value>
            <value>
                <fullName>Merchandise</fullName>
            </value>
            <value>
                <fullName>Car Leasing</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Premium placement - 1 Month</fullName>
            </value>
            <value>
                <fullName>Penalty</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>