force-app/main/default/objects/List_Product_Price__c/fields/Requires_Add_On__c.field-meta.xml
<CustomField>
    <fullName>Requires_Add_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Approval</label>
    <type>Checkbox</type>
</CustomField>