force-app/main/default/objects/List_Product_Price__c/fields/Requires_Additional_Charge__c.field-meta.xml
<CustomField>
    <fullName>Requires_Additional_Charge__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requires Additional Charge</label>
    <type>Checkbox</type>
</CustomField>