force-app/main/default/objects/List_Product_Price__c/fields/Requires_Asset__c.field-meta.xml
<CustomField>
    <fullName>Requires_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a product requires an asset</description>
    <label>Requires Asset</label>
    <type>Checkbox</type>
</CustomField>