force-app/main/default/objects/List_Product_Price__c/fields/Requires_Branding__c.field-meta.xml
<CustomField>
    <fullName>Requires_Branding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Branding</label>
    <type>Checkbox</type>
</CustomField>