force-app/main/default/objects/List_Product_Price__c/fields/Requires_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Requires_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Replacement</label>
    <type>Checkbox</type>
</CustomField>