force-app/main/default/objects/List_Product_Price__c/fields/Unapproved_Discount_Limit__c.field-meta.xml
<CustomField>
    <fullName>Unapproved_Discount_Limit__c</fullName>
    <description>Unapproved Discount Limit</description>
    <label>Unapproved Discount Limit</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>