force-app/main/default/objects/List_Product_Price__c/recordTypes/AT_List_Product_Price.recordType-meta.xml
<RecordType>
    <fullName>AT_List_Product_Price</fullName>
    <active>true</active>
    <label>AT List Product Price</label>
</RecordType>