force-app/main/default/objects/List_Product_Price__c/recordTypes/CD_List_Product_Price.recordType-meta.xml
<RecordType>
    <fullName>CD_List_Product_Price</fullName>
    <active>true</active>
    <label>CD List Product Price</label>
</RecordType>