force-app/main/default/objects/List_Product_Price__c/recordTypes/CZ_List_Product_Price.recordType-meta.xml
<RecordType>
    <fullName>CZ_List_Product_Price</fullName>
    <active>true</active>
    <description>Czech Republic List Product Price</description>
    <label>CZ List Product Price</label>
</RecordType>