force-app/main/default/objects/List_Product_Price__c/recordTypes/DE_List_Product_Price.recordType-meta.xml
<RecordType>
    <fullName>DE_List_Product_Price</fullName>
    <active>true</active>
    <label>DE List Product Price</label>
</RecordType>