force-app/main/default/objects/List_Product_Price__c/recordTypes/DH_AU_List_Product_Price.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_List_Product_Price</fullName>
    <active>true</active>
    <label>DH AU List Product Price</label>
</RecordType>