force-app/main/default/objects/List_Product_Price__c/recordTypes/FI_List_Product_Price.recordType-meta.xml
<RecordType>
    <fullName>FI_List_Product_Price</fullName>
    <active>true</active>
    <label>FI List Product Price</label>
</RecordType>