force-app/main/default/objects/List_Product_Price__c/recordTypes/FP_List_Product_Price.recordType-meta.xml
<RecordType>
    <fullName>FP_List_Product_Price</fullName>
    <active>true</active>
    <label>FP List Product Price</label>
</RecordType>