force-app/main/default/objects/List_Product_Price__c/recordTypes/HU_List_Product_Price.recordType-meta.xml
<RecordType>
    <fullName>HU_List_Product_Price</fullName>
    <active>true</active>
    <description>Hungary List Product Price</description>
    <label>HU List Product Price</label>
</RecordType>