force-app/main/default/objects/List_Product_Price__c/recordTypes/SE_List_Product_Price.recordType-meta.xml
<RecordType>
    <fullName>SE_List_Product_Price</fullName>
    <active>true</active>
    <label>SE List Product Price</label>
</RecordType>