force-app/main/default/objects/List_Product_Price__c/recordTypes/Talabat_List_Product_Price.recordType-meta.xml
<RecordType>
    <fullName>Talabat_List_Product_Price</fullName>
    <active>true</active>
    <label>Talabat List Product Price</label>
</RecordType>