force-app/main/default/objects/List_Product_Price__c/recordTypes/UK_List_Product_Price.recordType-meta.xml
<RecordType>
    <fullName>UK_List_Product_Price</fullName>
    <active>true</active>
    <label>UK List Product Price</label>
</RecordType>