force-app/main/default/objects/List_Product_Price__c/recordTypes/Yogiyo_List_Product_Price.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_List_Product_Price</fullName>
    <active>true</active>
    <label>Yogiyo List Product Price</label>
</RecordType>