force-app/main/default/objects/List_Product_Price__c/validationRules/List_price_shall_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>List_price_shall_not_be_empty</fullName>
    <active>true</active>
    <description>List price shall not be empty</description>
    <errorConditionFormula>ISBLANK( List_Price__c )</errorConditionFormula>
    <errorDisplayField>List_Price__c</errorDisplayField>
    <errorMessage>List price is required</errorMessage>
</ValidationRule>