force-app/main/default/objects/List_Product_Price__c/validationRules/List_Product_Group_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>List_Product_Group_Required</fullName>
    <active>true</active>
    <description>List product group is required</description>
    <errorConditionFormula>ISBLANK( Id_List_Product_Group__c )</errorConditionFormula>
    <errorDisplayField>Id_List_Product_Group__c</errorDisplayField>
    <errorMessage>Product group required</errorMessage>
</ValidationRule>