force-app/main/default/objects/List_Product_Price__c/validationRules/Product_name_shall_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_name_shall_not_be_empty</fullName>
    <active>true</active>
    <description>Product name shall not be empty</description>
    <errorConditionFormula>ISBLANK( Product_Name__c )</errorConditionFormula>
    <errorMessage>Product name is required</errorMessage>
</ValidationRule>