force-app/main/default/objects/List_Product_Price__c/validationRules/Quantity_shall_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_shall_not_be_empty</fullName>
    <active>true</active>
    <description>Quantity shall not be empty</description>
    <errorConditionFormula>ISBLANK( Default_Quantity__c )</errorConditionFormula>
    <errorDisplayField>Default_Quantity__c</errorDisplayField>
    <errorMessage>Default quantity is required</errorMessage>
</ValidationRule>