force-app/main/default/objects/List_Product_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Id_List_Product_Group__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Company__c</columns>
    <columns>Id_Country__c</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>