force-app/main/default/objects/List_Product_Price__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Id_Country__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>