force-app/main/default/objects/List_Product_Price__c/listViews/APAC_Products.listView-meta.xml
<ListView>
    <fullName>APAC_Products</fullName>
    <columns>Displayed_Name__c</columns>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>SKU__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Id_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>List_Product_Price__c.FP_List_Product_Price</value>
    </filters>
    <label>APAC Products</label>
    <language>en_US</language>
</ListView>