force-app/main/default/objects/List_Product_Price__c/listViews/Germany.listView-meta.xml
<ListView>
    <fullName>Germany</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Product_Name__c</columns>
    <columns>Requires_Asset__c</columns>
    <columns>Default_Quantity__c</columns>
    <columns>Displayed_Name__c</columns>
    <columns>Allow_Installments__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Requires_Additional_Charge__c</columns>
    <columns>Company__c</columns>
    <columns>Id_Country__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Id_Country__c</field>
        <operation>equals</operation>
        <value>germany</value>
    </filters>
    <label>Germany</label>
    <language>en_US</language>
    <sharedTo>
        <role>Global_Admin</role>
    </sharedTo>
</ListView>