force-app/main/default/objects/List_Product_Price__c/listViews/Hungary_List_Product_Price_Records.listView-meta.xml
<ListView>
    <fullName>Hungary_List_Product_Price_Records</fullName>
    <columns>NAME</columns>
    <columns>Displayed_Name__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Company__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Id_List_Product_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Id_Country__c</field>
        <operation>equals</operation>
        <value>Hungary</value>
    </filters>
    <label>Hungary List Product Price Records</label>
    <language>en_US</language>
    <sharedTo>
        <group>Salesforce_Admin</group>
    </sharedTo>
</ListView>